--- a/packages/typed-openapi/package.json
+++ b/packages/typed-openapi/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "typed-openapi",
+  "name": "@doto-solutions/typed-openapi",
   "type": "module",
   "version": "0.4.1",
   "main": "dist/index.cjs",
